condicoes de vitoria

--- a/jogo da velha.html
+++ b/jogo da velha.html
@@ -56,9 +56,11 @@ function trocarJogador () {
 
 
 function acharVencedor(){
-    if(caixinhas[0].innerHTML == caixinhas[1].innerHTML && caixinhas[0].innerHTML==caixinhas[2].innerHTML){  
-    }
-} 
+    if(caixinhas[0].innerHTML == caixinhas[1].innerHTML && caixinhas[0].innerHTML==caixinhas[2].innerHTML){ 
+        caixinhas[3].innerHTML == caixinhas[4].innerHTML && caixinhas[3].innerHTML==caixinhas[5].innerHTML
+     }
+ 
+    } 
 // primeira condição de vitória
 
 
