--- a/jogo da velha.html
+++ b/jogo da velha.html
@@ -56,11 +56,10 @@ function trocarJogador () {
 
 
 function acharVencedor(){
-    if(caixinhas[0].innerHTML == caixinhas[1].innerHTML && caixinhas[0].innerHTML==caixinhas[2].innerHTML){ 
-        caixinhas[3].innerHTML == caixinhas[4].innerHTML && caixinhas[3].innerHTML==caixinhas[5].innerHTML
-     }
- 
+    if(caixinhas[0].innerHTML == caixinhas[1].innerHTML && caixinhas[0].innerHTML==caixinhas[2].innerHTML){  
+        alert('vencedor') }           
     } 
+
 // primeira condição de vitória
 
 
