--- a/jogodavelha.html
+++ b/jogodavelha.html
@@ -156,7 +156,7 @@
                     
                     acharVencedor()
                     trocarJogador()
-                    resertar()
+                    // resertar()
                                                 
                 }
             })
